# utbots_vision

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  new_features_expected.md  package.xml  rviz.rviz
img_converter/src/: img_converter.cpp
launch/: body_track.launch  darknet_ros_kinect.launch  detection_kinect.launch  detection_webcam.launch  freenect.launch  recognition_nano_nuc.launch
manual_dataset/: instruções
src/: depth_estimator.py  depth_estimator_tester.py  locker_hand.py  locker_human.py
utbots_face_recognition/: .gitignore  README.md  package.xml  setup.cfg  setup.py
utbots_face_recognition/launch/: cam_recognition.launch.py  recognition.launch.py
utbots_face_recognition/utbots_face_recognition/: action_tester.py  recognize.py
utbots_vision_launch/: CMakeLists.txt  package.xml
utbots_vision_launch/launch/: body_pose.launch  body_pose_and_points.launch
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: BoundingBox.msg  ImageArray.msg  Object.msg  ObjectArray.msg  PersonArray.msg  PointArray.msg  Skeleton2d.msg
vision_tools/: CMakeLists.txt  README.md  medidasObjetosInstrucoes.txt  object3dpoint.rviz  package.xml
vision_tools/launch/: object3dCOCO.launch  object3dLARC2022.launch
vision_tools/src/: count_people.py  deepsort_tracking.py  detected_obj_manager.py  detected_person_manager.py  detected_person_manager_hri.py  extract_3d_centroid.py  get_detection_frame.py  (+2 more)
yolov8_ros/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
yolov8ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
(+11 files in other folders)
